--- a/src/index.css
+++ b/src/index.css
@@ -43,6 +43,12 @@ body {
   }
 }
 
+@layer components {
+  .btn-hover-animation {
+    @apply relative flex items-center justify-center overflow-hidden bg-white font-medium text-black transition-colors before:absolute before:left-0 before:top-0 before:h-[100%] before:w-[101%] before:origin-right before:scale-x-0 before:bg-primary before:transition-transform before:duration-500 before:ease-in-out before:content-[''] hover:text-white hover:before:origin-left hover:before:scale-x-100;
+  }
+}
+
 /* ================ */
 /* ===== HERO ===== */
 /* ================ */
@@ -85,5 +91,53 @@ body {
   }
   100% {
     transform: rotate(360deg);
+  }
+}
+
+/* ================== */
+/* ===== SKILLS ===== */
+/* ================== */
+
+.skillbox-hover-animation:after,
+.skillbox-hover-animation:before {
+  content: "";
+  width: 0px;
+  height: 0px;
+  position: absolute;
+  border: 0px solid var(--white);
+  transition: all 1s;
+}
+
+.skillbox-hover-animation:after {
+  top: -1px;
+  left: -1px;
+  border-top: 1px solid var(--white);
+  border-left: 1px solid var(--white);
+}
+
+.skillbox-hover-animation:before {
+  bottom: -1px;
+  right: -1px;
+  border-bottom: 1px solid var(--white);
+  border-right: 1px solid var(--white);
+}
+
+.skillbox-hover-animation:hover {
+  border-top-right-radius: 0px;
+  border-bottom-left-radius: 0px;
+}
+
+.skillbox-hover-animation:hover::after,
+.skillbox-hover-animation:hover::before {
+  width: 100%;
+  height: 100%;
+}
+
+/* ==================== */
+/* ===== PROJECTS ===== */
+/* ==================== */
+@layer components {
+  .project-tile {
+    @apply flex h-1/4 flex-col justify-center border-b bg-grey-dark p-6 text-4xl capitalize sm:py-8 sm:text-5xl;
   }
 }
